# skye-ladder

./: .dockerignore  .gitignore  .gitleaks.toml  .vercelignore  Anchor.toml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
frontend/: .gitignore  SECURITY-NOTES.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
frontend/api/: token-image.ts  token-metadata.ts
frontend/public/memes/: troll.avif  zoomer.avif
frontend/src/: App.tsx  constants.ts  index.css  main.tsx
frontend/src/components/: AboutTab.tsx  Activity.tsx  ActivityTab.tsx  ChartModal.tsx  ChartTab.tsx  DiscoverTab.tsx  FloatingCoins.tsx  FloatingMemes.tsx  FundCurve.tsx  LaunchTab.tsx  LiveFeed.tsx  Portfolio.tsx  PriceChart.tsx  SwapPanel.tsx  TierBreakdown.tsx  TradeFlash.tsx  UnlockProgress.tsx  WorldTab.tsx
frontend/src/hooks/: useActivity.ts  useBalances.ts  useDiscoveredTokens.ts  useLiveTrades.ts  usePool.ts  usePriceHistory.ts  useSolPrice.ts  useSwap.ts  useWalletRecord.ts
frontend/src/idl/: skye_amm.json  skye_ladder.json
frontend/src/lib/: format.ts  hookAccounts.ts  jupiter.ts  launchStore.ts  metadataReader.ts  metadataService.ts  parseTrade.ts  pda.ts  unlock.ts
jupiter-sdk/: Cargo.toml
jupiter-sdk/docs/: market-layout.md
jupiter-sdk/src/: hook.rs  lib.rs  pool.rs  quote.rs
migrations/: deploy.ts
programs/skye-amm/: Cargo.toml
programs/skye-amm/src/: errors.rs  lib.rs  math.rs  state.rs
programs/skye-amm/src/instructions/: add_liquidity.rs  initialize_pool.rs  mod.rs  remove_liquidity.rs  seed_pool_from_curve.rs  set_fee_config.rs  swap.rs
programs/skye-curve/: Cargo.toml
programs/skye-curve/src/: errors.rs  lib.rs  math.rs  state.rs
programs/skye-curve/src/instructions/: graduate.rs  init_launchpad.rs  launch_token.rs  mod.rs  swap.rs
programs/skye-ladder/: Cargo.toml  Cargo.toml.bak
programs/skye-ladder/src/: anti_bundle.rs  errors.rs  fuzz.rs  lib.rs  math.rs  pool_price.rs  positions.rs  state.rs  tests.rs
programs/skye-ladder/src/instructions/: admin.rs  claim_rewards.rs  create_wallet_record.rs  initialize.rs  mod.rs  set_test_price.rs  transfer_hook.rs
scans/: scan-2026-04-07-post-deploy.json  scan-2026-04-07.json
scripts/: _check-fees.ts  _get-price.ts  add-metadata.ts  backfill-metadata.ts  create-amm-pool.ts  create-pool.ts  deploy-all.sh  deploy.ts  e2e-test.ts  graduate-watcher.ts  launch-pumpfun.ts  prestage-skye-pool.ts  rebalance-pool.ts  scan-wallet-records.ts  setup-local.ts  setup-treasury.ts  test-buy-wallets.ts  test-e2e.ts  test-fresh-wallets.ts  test-hook.ts  test-metadata.ts  test-phases.ts  test-pump-and-sell.ts  test-restrictions.ts  test-sell-wallets.ts  update-metadata.ts  verify-programs.sh
tests/: skye-ladder.ts
