[package]
name = "skye-amm-jupiter"
version = "0.1.0"
description = "Jupiter AMM interface adapter for Skye AMM"
edition = "2021"
publish = false

[workspace]

[dependencies]
jupiter-amm-interface = "1.0.0-beta.0"
solana-pubkey = "4.2"
solana-instruction = "3.4"
solana-account = "4.2"
rust_decimal = "1"
anyhow = "1"
sha2 = "0.10"
