[package]
name = "skye-amm"
version = "0.1.0"
description = "Minimal constant-product AMM with Token-2022 TransferHook support"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "skye_amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
spl-token-2022 = { version = "3", features = ["no-entrypoint"] }
solana-program = "1.18"
