[package]
name = "skye-curve"
version = "0.1.0"
description = "Bonding curve AMM with Token-2022 TransferHook support for Skye Launchpad"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "skye_curve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
spl-token-2022 = { version = "3", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6"
spl-tlv-account-resolution = "0.6"
solana-program = "1.18"
# CPI into the AMM so graduate.rs can call seed_pool_from_curve atomically.
# `cpi` feature pulls in Anchor's generated cross-program invocation helpers
# and skips the AMM's own BPF entrypoint (no-entrypoint) so the two crates
# can compile together without symbol collisions.
skye-amm = { path = "../skye-amm", features = ["cpi"] }
