[package]
name = "skye-ladder"
version = "0.1.0"
description = "Solana Token-2022 Transfer Hook enforcing milestone-based sell restrictions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "skye_ladder"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# Enables the admin-only `set_test_price` instruction. NEVER enable for mainnet.
# Build for devnet/localnet with: `anchor build -- --features test-price`
test-price = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed", "interface-instructions"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
spl-transfer-hook-interface = "0.6"
spl-tlv-account-resolution = "0.6"

# Pin to avoid edition2024 crates incompatible with Solana BPF toolchain's Cargo

